Python callback wmGizmo.test_select doesn't allow return of negative values. #61107

Closed
opened 2019-02-01 19:37:25 +01:00 by Germano Cavalcante · 3 comments

Blender Version
Broken: blender2.8, 2018-02-01

Short description of error
As seen in the gizmo_find_intersected_3d function, gz->type->test_select(C, gz, co) can return -1 as an indication that the test can be skipped to the next gizmo.
But in python, according to the rna code, this value is limited between 0 and MAX_INT.
I wonder the reason for this limitation. Skipping the test to the next gizmo is an important feature for operators in the Tools system.

Exact steps for others to reproduce the error
You need to create a simple python code with gizmo for this.
(If you prefer, I can arrange a code later).

**Blender Version** Broken: blender2.8, 2018-02-01 **Short description of error** As seen in the `gizmo_find_intersected_3d` function, `gz->type->test_select(C, gz, co)` can return `-1` as an indication that the test can be skipped to the next gizmo. But in python, according to the rna code, this value is limited between `0` and `MAX_INT`. I wonder the reason for this limitation. Skipping the test to the next gizmo is an important feature for operators in the Tools system. **Exact steps for others to reproduce the error** You need to create a simple python code with gizmo for this. (If you prefer, I can arrange a code later).
Author
Member

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Campbell Barton was assigned by Germano Cavalcante 2019-02-01 19:37:52 +01:00

This issue was referenced by 999f3985c0

This issue was referenced by 999f3985c07704f0edbe4e505172859b2e676634

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61107
No description provided.