Fix T61107: wmGizmo.test_select can't return -1

This is used to skip selection.